# aegisos

./: .gitignore  GEMINI.md  README.md  pyproject.toml
.github/: copilot-instructions.md
demo_workspace/e19f1ec0-3a1d-48ed-b1c9-d50a22839bd8/: task.json
devlogs/: 001-why-agent-os.md  002-agents-as-systems.md  003-agent-systems-need-a-kernel.md
docs/: AACPDesign.md  AACP_Spec.md  AACP设计.md  AegisOS Vision_ Self-Organizing Agent Economy.md  AegisOS 核心骨架 Agent 开发冲刺计划3-11.md  AgentArchitecture.md  EvolutionaryArchitecture.md  EvolutionaryGateway.md  PRD.md  RoadMap.md  agent分工协作的架构设计.md  agent架构.md  演进式架构.md  演进式网关设计-跨语言通信-一键打包.md
examples/: fetch_and_report.py
project-memory/: architecture.md  changelog.md  decisions.md  roadmap.md  tasks.md  vision.md
scripts/: test_e2e_collaboration.py
src/aegisos/agents/: base.py  common.py  stub.py
src/aegisos/agents/skills/: file_system.py  web_fetch.py  web_scraper.py
src/aegisos/core/: actions.py  config.py  dispatcher.py  factory.py  llm.py  protocol.py  sandbox.py  skills.py  tasks.py  workspace.py
src/aegisos/memory/: manager.py
tests/: test_aacp_agent.py  test_aacp_integration.py  test_cognitive_architecture.py  test_core_edge_cases.py  test_dispatcher.py  test_llm.py  test_memory.py  test_phase2_guardrails.py  test_protocol.py  test_reflexion.py  test_remote_dispatch.py  test_sandbox.py  test_task8_logic.py  test_web_fetch.py  test_workspace.py
