[project]
name = "aegisos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "easydl", email = "48879766+easydlcom@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "anthropic>=0.84.0",
    "httpx>=0.28.1",
    "openai>=2.26.0",
    "pydantic>=2.12.5",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
